@@ -1,5 +1,8 @@
 == 0.6.2 (in git)
 
+ === New Features
+  * Support IBM_DB Adapter for table truncation. This is for DB2 >= 9.7 (GH-39 Samer Abukhait)
+
  === Bugfixes
   * Reversed GH-41 after larger community discussion. Mongo indexes are no longer dropped. (Ben Mabey)
   * Truncation strategy works on SqlServer tables with FKs. (GH-33, Hugo Freire)
